# projector

./: Cargo.toml  README.md
src/: main.rs  util.rs
src/database/: manage.rs  mod.rs  model.rs
src/post_setup/: editor.rs  mod.rs
src/scaffold/: c.rs  python.rs  rust.rs
src/state/: app.rs  languages.rs  mod.rs
src/ui/: gallery.rs  grab_string.rs  interactive_setup.rs  mod.rs  not_implemented_warning.rs  settings.rs  yn.rs
