[package]
name = "projector"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
color-eyre = "0.6.3"
confy = "0.6.1"
crossterm = "0.28.1"
directories = "6.0.0"
hostname = "0.4.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
rusqlite = { version = "0.34.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.44.0"
